# piddif

./: .gitignore  .mailmap  ChangeLog.md  LICENSE  README.md  default.nix  flake.nix  hie.yaml  nixpkgs.nix  package.yaml  piddif.cabal  shell.nix  todo.org
.github/workflows/: build.yaml
app/: Main.hs
examples/: Makefile  example.md  example.org
server/: Main.hs  form.html
src/: Piddif.hs  default.css
test/: Spec.hs
