cabal-version: 1.12
name:           piddif
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/myme/piddif#readme>
homepage:       https://github.com/myme/piddif#readme
bug-reports:    https://github.com/myme/piddif/issues
author:         Martin Øinæs Myrseth
maintainer:     myrseth@gmail.com
copyright:      2018 Martin Øinæs Myrseth
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/myme/piddif

library
  exposed-modules:
      Piddif
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , blaze-html
    , blaze-markup
    , file-embed
    , pandoc
    , text
  default-language: Haskell2010

executable piddif
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , filepath
    , optparse-applicative
    , piddif
    , process
    , temporary
    , text
  default-language: Haskell2010

executable piddif-server
  main-is: Main.hs
  hs-source-dirs:
      server
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , http-types
    , piddif
    , text
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010

test-suite piddif-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hspec
    , piddif
    , text
  default-language: Haskell2010
